welcome.lessons.welcome.variables.Variables.scala.code
var dejaFait = 0;
var nbPas : = 0;
while (!estsurBisuit) {
  avance();
  nbPas = nbPas + 1;
}
